<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:background="@drawable/sj_main2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="@string/title_activity_hotel"
            android:textSize="45dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/title_quimbaya"
            android:textSize="30dp"
            android:textColor="@color/darkblue"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/hotel_quimbaya" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/text_quimbaya"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/title_eltesoro"
            android:textSize="30dp"
            android:textColor="@color/darkblue"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/hotel_el_tesoro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/text_eltesoro"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/title_dharma"
            android:textSize="30dp"
            android:textColor="@color/darkblue"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/hotel_dharma" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/text_dharma"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="normal"/>

    </LinearLayout>

</ScrollView>